# esp32c6-lcd

./: .gitignore  Cargo.toml  TODO.md  justfile  readme.md
.cargo/: config.toml
