[package]
edition      = "2021"
name         = "esp-c6-lcd"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "esp-c6-lcd"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32c6",
  "log-04",
  "unstable",
] }
log = "0.4.27"

critical-section = "1.2.0"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = [
  "esp32c6",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.15.0", features = ["esp32c6", "log-04"] }
mipidsi = "0.9.0"
fugit = "0.3.7"
embedded-hal-bus = "0.3.0"
embedded-graphics = "0.8.1"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
